--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,19 @@
 [build]
+    publish = "build"
+    command = "yarn build"
     functions = "functions"
-    publish = "static"
 
 [[redirects]]
     from = "/*"
     to = "/index.html"
     status = 200
+
+[[headers]]
+    for = "/static/*"
+    [headers.values]
+        cache-control = 'public, max-age=31536000, immutable'
+
+[[headers]]
+    for = "/service-worker.js"
+    [headers.values]
+        cache-control = 'no-cache'
