--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
+  "proxy": "http://localhost:34567",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
