--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "date-fns": "^2.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "typeface-roboto": "^0.0.75"
   },
   "proxy": "http://localhost:34567",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "http://kittensafe.netlify.com/",
+  "repository": "bitbucket:silizias/kittensafe",
+  "license": "GPL-3.0-or-later"
 }
