--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.43",
-    "@material-ui/pickers": "^4.0.0-alpha.2",
+    "@material-ui/pickers": "^4.0.0-alpha.3",
     "clsx": "^1.1.0",
     "date-fns": "^2.9.0",
+    "lodash.throttle": "^4.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-scripts": "3.4.0",
-    "typeface-roboto": "^0.0.75"
+    "rehype-raw": "^4.0.1",
+    "rehype-react": "^4.0.1",
+    "rehype-sanitize": "^3.0.0",
+    "remark-emoji": "^2.0.2",
+    "remark-external-links": "^5.0.0",
+    "remark-parse": "^7.0.2",
+    "remark-rehype": "^5.0.0",
+    "typeface-roboto": "^0.0.75",
+    "unified": "^8.4.2"
   },
   "proxy": "http://localhost:34567",
   "scripts": {
