--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "KittenSafe",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "dependencies": {
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
@@ -26,7 +26,7 @@
   "proxy": "http://localhost:34567",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "REACT_APP_BRANCH=$BRANCH react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
