--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
+    "react-helmet": "^6.0.0-beta.2",
     "react-scripts": "3.4.0",
     "rehype-raw": "^4.0.1",
     "rehype-react": "^4.0.1",
