--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "KittenSafe",
   "version": "0.4.0",
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
+    "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.47",
-    "@material-ui/pickers": "^4.0.0-alpha.4",
+    "@material-ui/lab": "^4.0.0-alpha.48",
+    "@material-ui/pickers": "^4.0.0-alpha.5",
     "clsx": "^1.1.0",
-    "date-fns": "^2.11.1",
+    "date-fns": "^2.12.0",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
-    "react-helmet": "^6.0.0-beta.2",
+    "react-helmet": "^6.0.0",
     "react-scripts": "3.4.1",
     "rehype-raw": "^4.0.2",
     "rehype-react": "^5.0.1",
