--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "KittenSafe",
   "version": "0.4.0",
   "dependencies": {
-    "@material-ui/core": "^4.9.12",
+    "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.51",
-    "@material-ui/pickers": "^4.0.0-alpha.5",
+    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/pickers": "4.0.0-alpha.5",
     "clsx": "^1.1.0",
-    "date-fns": "^2.12.0",
+    "date-fns": "^2.13.0",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
