--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
-    "@material-ui/pickers": "4.0.0-alpha.5",
+    "@material-ui/pickers": "^4.0.0-alpha.8",
     "clsx": "^1.1.1",
     "date-fns": "^2.14.0",
     "lodash.throttle": "^4.1.1",
