--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "KittenSafe",
+  "name": "kittensafe",
   "version": "0.4.0",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^4.0.0-alpha.9",
+    "@material-ui/pickers": "^4.0.0-alpha.10",
     "clsx": "^1.1.1",
-    "date-fns": "^2.14.0",
+    "date-fns": "^2.15.0",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.1",
+    "react-dropzone": "^11.0.2",
     "react-helmet": "^6.1.0",
     "react-scripts": "3.4.1",
     "rehype-raw": "^4.0.2",
@@ -19,7 +19,7 @@
     "rehype-sanitize": "^3.0.1",
     "remark-emoji": "^2.1.0",
     "remark-external-links": "^6.1.0",
-    "remark-parse": "^8.0.2",
+    "remark-parse": "^8.0.3",
     "remark-rehype": "^7.0.0",
     "typeface-roboto": "^0.0.75",
     "unified": "^9.0.0"
