--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "kittensafe",
   "version": "0.4.0",
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^4.0.0-alpha.10",
+    "@material-ui/core": "^5.0.0-alpha.5",
+    "@material-ui/icons": "^5.0.0-alpha.4",
+    "@material-ui/lab": "^5.0.0-alpha.5",
+    "@material-ui/pickers": "^4.0.0-alpha.11",
     "clsx": "^1.1.1",
     "date-fns": "^2.15.0",
     "lodash.throttle": "^4.1.1",
